# polyodds

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  docker-compose.yml  flake.nix
.cargo/: config.toml
backend/: Cargo.toml  Dockerfile
backend/src/: auth.rs  config.rs  error.rs  lib.rs  state.rs
crates/backend/: Cargo.toml
crates/backend/src/: auth.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs
crates/backend/src/routes/handlers/: categories.rs  communities.rs  markets.rs  mod.rs
crates/backend/src/routes/models/: auth.rs  categories.rs  communities.rs  markets.rs  users.rs
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/playwright-report/: index.html
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  bets.ts  categories.ts  client.ts  communities.ts  markets.ts  queryClient.ts  users.ts
frontend/src/hooks/: useAuth.ts  (+4 more)
frontend/test-results/: .last-run.json
frontend/tests/: auth-community.spec.ts  features-auth.spec.ts  features-bets.spec.ts  features-communities.spec.ts  features-daily-claim.spec.ts  features-home.spec.ts  features-leaderboard.spec.ts  features-market-management.spec.ts  features-markets.spec.ts  features-profile.spec.ts  frontend-smoke.spec.ts  protected-smoke.spec.ts
migrations/: 001_init.sql  002_allow_uncategorized_and_preserve_markets.sql  002_market_status_to_english.sql  002_seed_categories.sql  003_market_dynamic_trading.sql  003_remove_close_at.sql  004_seed_initial_pool_liquidity.sql
scripts/: e2e-postgres.sh
(+52 files in other folders)
