[package]
name = "backend"
edition.workspace = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.7"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
http = "1"
jsonwebtoken = "9.3"
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
    "chrono",
    "uuid",
] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
